--- a/styles/developerPortfolio.css
+++ b/styles/developerPortfolio.css
@@ -19,6 +19,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 .nav-title {
     color:#181818;
@@ -37,5 +38,43 @@ nav a {
     text-decoration: none;
     color:#474747;
     font-size: 20px;
+    font-weight: 400;
+}
+/* header section */
+.header {
+    background: #FFF8F3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-content {
+    max-width: 585px;
+}
+.banner-image {
+    width: 585px;
+
+}
+.banner-greeting {
+    color:#474747;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+.banner-title {
+    color:#181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-text {
+    color: #757575;
+    font-size: 18px;
     font-weight: 400;
 }
