--- a/styles/developerPortfolio.css
+++ b/styles/developerPortfolio.css
@@ -14,6 +14,12 @@ body {
     font-weight: 700;
     padding: 15px 35px;
 }
+.section-title {
+    color: var(--dark-01, #181818);
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
 /* nav section */
 nav {
     display: flex;
@@ -77,4 +83,40 @@ nav a {
     color: #757575;
     font-size: 18px;
     font-weight: 400;
+}
+/* main section */
+main {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+/* about section */
+.about {
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 130px 155px;
+    margin: 130px 0;
+}
+.section-description {
+    color:#757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+.about-info {
+    text-align: center;
+}
+.info-title {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+}
+.info-description {
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
 }
