--- a/styles/developerPortfolio.css
+++ b/styles/developerPortfolio.css
@@ -89,6 +89,9 @@ main {
     width: 1140px;
     margin: 0 auto;
 }
+main section {
+    margin-top: 130px;
+}
 
 /* about section */
 .about {
@@ -119,4 +122,62 @@ main {
     color: #474747;
     font-size: 20px;
     font-weight: 700;
+}
+/* What I do Section */
+#what-i-do-description {
+    padding: 30px 150px 50px 150px ;
+}
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title {
+    color:#181818;
+    font-size: 20px;
+    font-weight: 700;
+}
+.skill-description {
+    color:#757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+/* Resume Section */
+.resume-container {
+    display: flex;
+    gap: 70px;
+}
+.resume-column-title {
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.resume-item-title {
+    color:#474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+.resume-item-institute {
+    color:#757575;
+    font-size: 20px;
+    font-weight: 600;
+}
+.resume-item-description {
+    color:#757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+.resume-container hr {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.download-cv {
+    text-align: center;
+    margin-top: 50px;
 }
